<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">
       
    
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="18dp"
        android:text="@string/titleSI"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/inputP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/phint" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonFind"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputR"
        android:layout_below="@+id/inputR"
        android:layout_marginTop="35dp"
        android:text="@string/button" />

    <TextView
        android:id="@+id/resulter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/inputP"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/inputP"
        android:text="@string/money"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/inputT"
        android:layout_alignLeft="@+id/resulter"
        android:text="@string/time"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonFind"
        android:layout_alignLeft="@+id/textView3"
        android:text="@string/percent"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/inputT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputP"
        android:layout_marginTop="38dp"
        android:layout_toLeftOf="@+id/resulter"
        android:ems="10"
        android:hint="@string/thint" />

    <EditText
        android:id="@+id/inputR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputT"
        android:layout_marginTop="42dp"
        android:layout_toLeftOf="@+id/resulter"
        android:ems="10"
        android:hint="@string/rhint" />

    <Button
        android:id="@+id/buttonReseters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonFind"
        android:layout_toRightOf="@+id/inputR"
        android:text="@string/reset" />
    </RelativeLayout>
</ScrollView>