<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="208dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonSI"
        android:layout_alignRight="@+id/buttonSI"
        android:layout_below="@+id/buttonSI"
        android:layout_marginTop="18dp"
        android:text="@string/buttonSort" />

    <Button
        android:id="@+id/buttonMul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonSort"
        android:layout_alignBottom="@+id/buttonSort"
        android:layout_alignLeft="@+id/buttonPal"
        android:text="@string/buttonMul" />

    <Button
        android:id="@+id/buttonPal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSort"
        android:layout_toRightOf="@+id/buttonSI"
        android:text="@string/buttonPal" />

    <Button
        android:id="@+id/buttonSI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="74dp"
        android:text="@string/buttonsi" />

    <Button
        android:id="@+id/buttonQuad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonSort"
        android:layout_alignTop="@+id/scrollView1"
        android:text="@string/buttonQuad" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonSI"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:text="@string/optitle" />

</RelativeLayout>