<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <EditText
        android:id="@+id/input1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sorthint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/input2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sorthint" />

    <EditText
        android:id="@+id/input3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sorthint" />

    <EditText
        android:id="@+id/input4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sorthint" />

    <EditText
        android:id="@+id/input5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sorthint" />

    <Button
        android:id="@+id/buttonmake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonsorter" />

    <Button
        android:id="@+id/buttonReset"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:text="@string/reset" />

</LinearLayout>